--- a/default.conf
+++ b/default.conf
@@ -4,11 +4,11 @@ server {
 
     #access_log  /var/log/nginx/host.access.log  main;
 
-#    proxy_connect_timeout 200s;
-#    proxy_send_timeout 200s;
-#    proxy_read_timeout 200s;
+    proxy_connect_timeout 200s;
+    proxy_send_timeout 200s;
+    proxy_read_timeout 200s;
 
-#    proxy_buffer_size 128k;
+    proxy_buffer_size 128k;
     proxy_buffers 8 256k;
 
     location / {
